<resources>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="antiharass_accept_white_list">Accept only from whitelist</string>
    <string name="antiharass_accept_white_list_contacts">Accept only from whitelist and contacts</string>
    <string name="antiharass_add_black_list">Add to Blacklist</string>
    <string name="antiharass_add_black_list_message">The numbers you are adding are from your whitelist. Do you really want to add them to your blacklist?</string>
    <string name="antiharass_add_black_success">The number has been added to your blacklist.</string>
    <string name="antiharass_add_from_calllog">From call log</string>
    <string name="antiharass_add_from_contacts">From contacts</string>
    <string name="antiharass_add_manually">Manually</string>
    <string name="antiharass_add_white_list">Add to Whitelist</string>
    <string name="antiharass_add_white_list_message">The numbers you are adding are from your blacklist. Do you really want to add them to your whitelist?</string>
    <string name="antiharass_alert_msg_delete_one">Do you really want to delete it?</string>
    <string name="antiharass_black_list">Blacklist</string>
    <string name="antiharass_block_black_list">Block all from blacklist</string>
    <string name="antiharass_block_mode">Blocking mode</string>
    <string name="antiharass_blocked_list_add">Add it to blacklist</string>
    <string name="antiharass_blocked_list_call">Call this number</string>
    <string name="antiharass_blocked_list_delete">Delete</string>
    <string name="antiharass_clear_all">Clear all records</string>
    <string name="antiharass_edit">Edit</string>
    <string name="antiharass_edit_dialog_number">Numbers:</string>
    <string name="antiharass_empty_all_message">Do you really want to clear all records?</string>
    <string name="antiharass_mode_prank_call">One-Ring phone Scam</string>
    <string name="antiharass_no_calllog">Your call log is empty.</string>
    <string name="antiharass_no_calllog_history">"Unwanted calls will be blocked here.
Enjoy your peaceful life."</string>
    <string name="antiharass_no_contacts">Your contact list is empty.</string>
    <string name="antiharass_notification_CheatCall_title">One-Ring Phone Scam call detected</string>
    <string name="antiharass_notification_content_block_calls">View details</string>
    <string name="antiharass_notification_content_block_one_cheatcall_no_location">%1$s</string>
    <string name="antiharass_notification_title">%s call (s) blocked</string>
    <string name="antiharass_reject_way">How to block calls</string>
    <string name="antiharass_setting_black">Blacklist (%d)</string>
    <string name="antiharass_setting_close">Accept all</string>
    <string name="antiharass_setting_white">Whitelist (%d)</string>
    <string name="antiharass_unread_count">%s</string>
    <string name="antiharass_vault_hidden">"Sorry, this feature is not available.Possible reasons:
1. You have not installed Vault.
2. Stealth Mode is enabled in Vault."</string>
    <string name="antiharass_white_list">Whitelist</string>
    <string name="applovin_instructions_dialog_title">Instructions</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="atf_subtitle">Fast Scan for Regular Check-up</string>
    <string name="atf_title">Antivirus Free</string>
    <string name="battery_subtitle">One tap to extend battery life!</string>
    <string name="battery_title">Green Battery-Power Saver</string>
    <string name="blocker_call_notification">Show notifications after blocking</string>
    <string name="blocker_one_ring_call">Block one-ring phone scam</string>
    <string name="callblocker_complete_tip_title">Tips</string>
    <string name="callblocker_setting_notice_go">Go Setting</string>
    <string name="callblocker_tips_apply_ignore_battery_optimization">In order to avoid being killed by the system, the call block fails, please set Call Blocker app always run in background</string>
    <string name="calllog_call_duration">Call Duration: %s</string>
    <string name="calllog_not_connected">Abandoned Calls</string>
    <string name="cancel_btn">Cancel</string>
    <string name="card_content_descriptor">card</string>
    <string name="com.crashlytics.android.build_id">09160c3ccf314bb8a5f24c3cd3b9d5d8</string>
    <string name="com_mopub_nativeads_sponsored_by">Sponsored by %s</string>
    <string name="common_add">Add</string>
    <string name="common_app_name">Call Blocker</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_delete">Delete</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_ok">OK</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_settings">Settings</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_tips">Tips</string>
    <string name="common_today">Today</string>
    <string name="common_yesterday">Yesterday</string>
    <string name="confirm_quit">Confirm</string>
    <string name="cooler_subtitle">"Phone's too hot? Cool it down!"</string>
    <string name="cooler_title">CPU Cooler Master-Phone Cooler</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="default_web_client_id">322021531596-5l69ealo5i7dqt1mpu02iank9snh68ok.apps.googleusercontent.com</string>
    <string name="dialog_content" formatted="false">"After canceling your permission for %1s's Privacy Policy, %2s will no longer be able to provide services. Do you really want to cancel the permission?"</string>
    <string name="dialog_title">Service Suspension Notice</string>
    <string name="dofun_btn_install">INSTALL</string>
    <string name="enable">Enable Now</string>
    <string name="gdpr_settings_item">Agree to the privacy policy</string>
    <string name="iab_guide_dialog_btn">Get Now</string>
    <string name="iab_guide_dialog_description">Tired of ads? Pay to remove ads and enjoy uninterrupted experience</string>
    <string name="iab_guide_dialog_title">Limited-time offer</string>
    <string name="icon_not_migrated_tv">Your data from Private Space need to be transferred</string>
    <string name="launch_alert_btn_rate_cancel">Not Now</string>
    <string name="launch_alert_btn_rate_ok">Rate 5-stars</string>
    <string name="launch_alert_msg_rate">If you like this app, please give us 5 stars on Google Play.</string>
    <string name="launch_alert_title_rate">Rate this app</string>
    <string name="main_set_notify_share_title">Share</string>
    <string name="more_ATF">AntiVirus Free</string>
    <string name="more_menu_feedback">Feedback</string>
    <string name="permisson_dialog_button_2">Go set</string>
    <string name="permisson_dialog_tip2">Necessary permissions are not accquired, Call Blocker will not work, please grant the permissions in app permission management.</string>
    <string name="private_space">Private Space</string>
    <string name="reject_way_direct_hang_up">Hang up</string>
    <string name="score">Rate</string>
    <string name="setting_about">About</string>
    <string name="setting_check_update">Check for updates</string>
    <string name="silent_but_not_hang_up">Mute without hanging up</string>
</resources>