<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:background="@color/permisson_dialog_top_background_color" android:paddingLeft="40.0dip" android:paddingTop="20.0dip" android:paddingRight="40.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_setting" android:contentDescription="@string/common_settings" />
    </LinearLayout>
    <TextView android:textSize="@dimen/dialog_title_text_size" android:textColor="@color/permisson_dialog_text_color" android:background="@color/white" android:padding="17.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permisson_dialog_tip2" />
    <Button android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/permisson_common_dialog_setting" android:background="@color/permisson_dialog_top_background_color" android:layout_width="fill_parent" android:layout_height="46.0dip" android:text="@string/permisson_dialog_button_2" />
</LinearLayout>