<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/dialog_margin_buttom" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:ellipsize="end" android:gravity="center_vertical" android:id="@id/call" android:background="@drawable/list_selector" android:paddingLeft="@dimen/dialog_content_margin_left_right" android:paddingRight="@dimen/dialog_content_margin_left_right" android:layout_width="fill_parent" android:layout_height="@dimen/dialog_item_height" android:text="@string/antiharass_add_from_calllog" android:singleLine="true" style="@style/dialog_item" />
    <TextView android:ellipsize="end" android:gravity="center_vertical" android:id="@id/contacts" android:background="@drawable/list_selector" android:paddingLeft="@dimen/dialog_content_margin_left_right" android:paddingRight="@dimen/dialog_content_margin_left_right" android:layout_width="fill_parent" android:layout_height="@dimen/dialog_item_height" android:text="@string/antiharass_add_from_contacts" android:singleLine="true" style="@style/dialog_item" />
    <TextView android:ellipsize="end" android:gravity="center_vertical" android:id="@id/write" android:background="@drawable/list_selector" android:paddingLeft="@dimen/dialog_content_margin_left_right" android:paddingRight="@dimen/dialog_content_margin_left_right" android:layout_width="fill_parent" android:layout_height="@dimen/dialog_item_height" android:text="@string/antiharass_add_manually" android:singleLine="true" style="@style/dialog_item" />
</LinearLayout>