<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/rate_dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/rate_ll" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="16.0dip">
        <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/rate_title" android:paddingTop="40.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/launch_alert_title_rate" />
        <TextView android:textSize="14.0sp" android:textColor="#ff545454" android:id="@id/rate_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="24.0dip" android:text="@string/launch_alert_msg_rate" />
        <ImageView android:layout_gravity="center" android:id="@id/dialog_icon_star" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/rate_message_image" />
        <LinearLayout android:orientation="vertical" android:id="@id/btn_layout" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="24.0dip">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <Button android:textSize="16.0sp" android:textColor="@color/nq_545454" android:layout_gravity="center_vertical" android:id="@id/btn_cancel" android:background="@drawable/cb_btn_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/launch_alert_btn_rate_cancel" android:singleLine="true" android:layout_weight="1.0" />
                <Button android:textSize="16.0sp" android:textColor="@color/nq_3f51b5" android:layout_gravity="center_vertical" android:id="@id/btn_ok" android:background="@drawable/cb_btn_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/launch_alert_btn_rate_ok" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>