<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:background="@drawable/iab_guide_dialog_bg" android:paddingBottom="24.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="15.0dip" android:text="@string/iab_guide_dialog_title" />
    <ImageView android:id="@id/close_button" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="@null" />
    <FrameLayout android:id="@id/iab_guide_bg_view" android:layout_width="fill_parent" android:layout_height="136.0dip" android:layout_below="@id/title">
        <ImageView android:layout_gravity="center" android:id="@id/guide_icon" android:layout_width="77.0dip" android:layout_height="77.0dip" android:layout_marginTop="28.0dip" android:src="@drawable/iab_guide_dialog_icon" android:contentDescription="@string/common_app_name" />
        <ImageView android:layout_gravity="center|right|top" android:layout_width="103.0dip" android:layout_height="69.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="28.0dip" android:src="@drawable/iab_guide_dialog_price" android:contentDescription="@string/common_app_name" />
    </FrameLayout>
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="32.0dip" android:text="@string/iab_guide_dialog_description" android:layout_below="@id/iab_guide_bg_view" />
    <Button android:textSize="20.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/ok_button" android:background="@drawable/iab_guide_dialog_btn_bg" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/iab_guide_dialog_btn" android:layout_below="@id/description" android:textAllCaps="false" />
</RelativeLayout>