<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/dialog_margin_buttom" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:ellipsize="end" android:gravity="center_vertical" android:id="@id/call_item" android:background="@drawable/list_selector" android:paddingLeft="@dimen/dialog_content_margin_left_right" android:paddingRight="@dimen/dialog_content_margin_left_right" android:layout_width="fill_parent" android:layout_height="@dimen/nq_dialog_item_height" android:text="@string/antiharass_blocked_list_call" android:singleLine="true" style="@style/dialog_item" />
    <TextView android:ellipsize="end" android:gravity="center_vertical" android:id="@id/add_black" android:background="@drawable/list_selector" android:paddingLeft="@dimen/dialog_content_margin_left_right" android:paddingRight="@dimen/dialog_content_margin_left_right" android:layout_width="fill_parent" android:layout_height="@dimen/nq_dialog_item_height" android:text="@string/antiharass_blocked_list_add" android:singleLine="true" style="@style/dialog_item" />
    <TextView android:ellipsize="end" android:gravity="center_vertical" android:id="@id/delete_item" android:background="@drawable/list_selector" android:paddingLeft="@dimen/dialog_content_margin_left_right" android:paddingRight="@dimen/dialog_content_margin_left_right" android:layout_width="fill_parent" android:layout_height="@dimen/nq_dialog_item_height" android:text="@string/antiharass_blocked_list_delete" android:singleLine="true" style="@style/dialog_item" />
</LinearLayout>