<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/nq_page_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/activity_title" android:layout_width="fill_parent" android:layout_height="@dimen/nq_title_72px" layout="@layout/custom_single_title" />
    <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@id/llSpaceRemind" android:background="@drawable/title_bar_yellow" android:layout_width="fill_parent" android:layout_height="48.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/icon_not_migrated_iv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:src="@drawable/icon_not_migrated" />
                <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/icon_not_migrated_tv" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/antiharass_tab_height">
                <TextView android:gravity="center_vertical" android:id="@id/more_setting_tv" android:background="@drawable/list_selector_other" android:paddingLeft="@dimen/nq_margin_16dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/common_settings" android:drawableLeft="@drawable/icon_more_set" android:drawablePadding="@dimen/nq_margin_8dip" android:layout_weight="1.0" style="@style/more_item_font" />
                <TextView android:gravity="center_vertical" android:id="@id/more_feeback_tv" android:background="@drawable/list_selector_other" android:paddingLeft="@dimen/nq_margin_16dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/more_menu_feedback" android:drawableLeft="@drawable/icon_more_feedback" android:drawablePadding="@dimen/nq_margin_8dip" android:layout_weight="1.0" style="@style/more_item_font" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/antiharass_tab_height">
                <TextView android:gravity="center_vertical" android:id="@id/share" android:background="@drawable/list_selector_other" android:paddingLeft="@dimen/nq_margin_16dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/main_set_notify_share_title" android:drawableLeft="@drawable/icon_more_share" android:drawablePadding="@dimen/nq_margin_8dip" android:layout_weight="1.0" style="@style/more_item_font" />
                <TextView android:gravity="center_vertical" android:id="@id/rate" android:background="@drawable/list_selector_other" android:paddingLeft="@dimen/nq_margin_16dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/score" android:drawableLeft="@drawable/icon_more_grade" android:drawablePadding="@dimen/nq_margin_8dip" android:layout_weight="1.0" style="@style/more_item_font" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/antiharass_tab_height">
                <TextView android:gravity="center_vertical" android:id="@id/more_private_space_tv" android:background="@drawable/list_selector_other" android:paddingLeft="@dimen/nq_margin_16dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/private_space" android:drawableLeft="@drawable/icon_not_migrated_2" android:drawablePadding="@dimen/nq_margin_8dip" android:layout_weight="1.0" style="@style/more_item_font" />
                <TextView android:gravity="center_vertical" android:id="@id/more_atf_btn" android:background="@drawable/list_selector_other" android:paddingLeft="@dimen/nq_margin_16dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/more_ATF" android:drawableLeft="@drawable/icon_more_update" android:drawablePadding="@dimen/nq_margin_8dip" android:layout_weight="1.0" style="@style/more_item_font" />
            </LinearLayout>
            <View android:background="@color/nq_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/nq_divider_height" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/level_view" android:visibility="gone" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="80.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/ad_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>